numerous fixes to get working

--- a/backbone/simpleBlog/views/index.ejs
+++ b/backbone/simpleBlog/views/index.ejs
@@ -17,7 +17,7 @@
     </script>
 
     <script type="text/template" id="commentView">
-      {{name}} said on {{commentDate}} {{comment}}
+      {{name}} said on {{commentDate}} {{text}}
     </script>
 
     <script type="text/template" id="newCommentView">
