--- a/backbone/photoapp/views/login.ejs
+++ b/backbone/photoapp/views/login.ejs
@@ -1,11 +1,11 @@
 <h1>Sign In</h1>
-<form method-"post" action="/login">
+<form method="post" action="/login">
   <p>Username: <input name='username' type='text' /></p>
   <p>Password: <input name='password' type='password' /></p>
   <button>Login</button>
 </form>
 <h1>Create Account</h1>
-<form method-"post" action="/create">
+<form method="post" action="/create">
   <p>Username: <input name='username' type='text' /></p>
   <p>Password: <input name='password' type='password' /></p>
   <button>Create</button>
