started adding upload functionality

--- a/backbone/photoapp/views/index.ejs
+++ b/backbone/photoapp/views/index.ejs
@@ -16,6 +16,12 @@
       </ul>
       <hr/>
     </script>
+
+    <script type="text/template" id="addPhotoView">
+      <p>Photo: <input type="file" id="imageUpload"/></p>
+      <p>Caption: <input type="text" id="imageCaption" /></p>
+      <button>Upload</button>
+    </script>
     <script src="/jquery.js"></script>
     <script src="/underscore.js"></script>
     <script src="/backbone.js"></script>
