--- a/backbone/base64EncodeDecode/views/index.ejs
+++ b/backbone/base64EncodeDecode/views/index.ejs
@@ -5,9 +5,9 @@
 	<body>
     	  <div id="main"/>
   	  <script type="text/template" id="decodeView">
-  	    <textarea id="toBeDecoded"></textarea><br/>
-	    <textarea id="decoded"></textarea><br/>
-	    <button id="decode">Decode</button>
+		  <input type="text" id="toBeDecoded" name="toBeDecoded" value="{{toBeDecoded}}"/><br/>
+		  <input type="text" id="decoded" name="decoded" value="{{decoded}}"/><br/>	  
+	     <button id="decode">Decode</button>
 	  </script>	
     	  <script src="/jquery.js"></script>
           <script src="/underscore.js"></script>
