--- a/angular/holiday-app/src/app/months/months.component.html
+++ b/angular/holiday-app/src/app/months/months.component.html
@@ -2,6 +2,8 @@
   <option *ngFor="let year of years" value="{{year}}">{{year}}</option>
 </select>
 -->
-<article (click)="yearClicked()">
-{{year}}
+<article (click)="monthClick()">
+Month: {{month}}<br/>
+Day String: {{dayString}}<br/>
+Holiday String: {{holidayString}}<br/>
 </article>
